// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders correctly 1`] = `
<div
  className="wds-banner-notification wds-message"
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-flag-small"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - messge
  </span>
  <svg
    className="wds-icon wds-icon-tiny wds-banner-notification__close"
    onClick={[Function]}
  >
    <use
      xlinkHref="#wds-icons-cross-tiny"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</div>
`;

exports[`Notification renders correctly 2`] = `
<div
  className="wds-banner-notification wds-success"
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-checkmark-circle-small"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - success
  </span>
  <svg
    className="wds-icon wds-icon-tiny wds-banner-notification__close"
    onClick={[Function]}
  >
    <use
      xlinkHref="#wds-icons-cross-tiny"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</div>
`;

exports[`Notification renders correctly 3`] = `
<div
  className="wds-banner-notification wds-warning"
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-alert-small"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - warning
  </span>
  <svg
    className="wds-icon wds-icon-tiny wds-banner-notification__close"
    onClick={[Function]}
  >
    <use
      xlinkHref="#wds-icons-cross-tiny"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</div>
`;

exports[`Notification renders correctly 4`] = `
<div
  className="wds-banner-notification wds-alert"
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-error-small"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - alert
  </span>
  <svg
    className="wds-icon wds-icon-tiny wds-banner-notification__close"
    onClick={[Function]}
  >
    <use
      xlinkHref="#wds-icons-cross-tiny"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</div>
`;
